# http_filesystem_bridge

./: .fsignore  Cargo.toml  README.md  justfile
src/: fs.rs  main.rs  path.rs  security.rs  thread_pool.rs  utils.rs  windows.rs
src/fs/: entry.rs  handler.rs  metadata.rs
src/fs/entry/: entry.rs  name.rs
src/fs/handler/: entry_handler.rs  memfs_handler.rs
src/utils/: access.rs  dir_tree.rs  timeout.rs
tests/: tree.json
