[package]
name = "http_fs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
colored = "3.0.0"
ctrlc = "3.4.4"
dokan = "0.3.1"
dokan-sys = "0.3.1"
env_logger = "0.11.8"
futures-util = "0.3.31"
http = "1.1.0"
ignore = "0.4.23"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio ={version = "1.45.0", features = ["full"]}
url = "2.5.4"
widestring = "0.4.3"
winapi = {version = "0.3.9", features = ["psapi"]}
